# pod2-client

./: .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  CLAUDE.md  Cargo.toml  README.md  client-demo.sh  justfile  mprocs.yaml  package.json  playground.sh  pnpm-lock.yaml  pnpm-workspace.yaml  rust-analyzer.toml  rustfmt.toml  turbo.json
.cargo/: config.toml.example
.github/workflows/: clippy.yml  js_tests.yml  release.yml  rust_tests.yml  rustfmt.yml  tests.yml
app/: package.json  pnpm-lock.yaml
app/src/: App.tsx
app/src-tauri/: Cargo.toml
app/src-tauri/src/: lib.rs
app/src-tauri/src/p2p/: handler.rs  mod.rs
app/src/components/: AppSidebar.tsx  ChatView.tsx  PodViewer.tsx
app/src/lib/: store.ts
apps/client/: DESIGN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
apps/client/src/: App.css  App.tsx  routeTree.gen.ts
apps/client/src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/config/: development-alice.toml  development-bob.toml  frog-testing.toml  local.toml  production.toml  sample.toml  staging.toml  test.toml
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: cache.rs  config.rs  frog.rs  lib.rs
apps/client/src-tauri/src/features/: documents.rs  mod.rs
apps/client/src-tauri/src/features/authoring/: commands.rs  mod.rs
apps/client/src-tauri/src/features/blockies/: commands.rs  generator.rs  mod.rs
apps/client/src-tauri/src/features/console/: aliases.rs  binding.rs  commands.rs  mod.rs  parser.rs  service.rs  types.rs
apps/client/src-tauri/src/features/identity_setup/: commands.rs  github_oauth.rs  mod.rs
apps/client/src-tauri/src/features/integration/: commands.rs  mod.rs
apps/client/src-tauri/src/features/networking/: commands.rs  mod.rs
apps/client/src-tauri/src/features/p2p/: commands.rs
apps/client/src-tauri/src/features/pod_management/: commands.rs  mod.rs
apps/client/src-tauri/src/frog/: level.rs  mining.rs  types.rs
apps/client/src-tauri/src/p2p/: handler.rs  message.rs  node.rs
apps/client/src-tauri/src/p2p_node/: handler.rs  message.rs  mod.rs
apps/client/src/components/: AppSidebar.tsx  ChatView.tsx  CreateSignedPodDialog.tsx  DebugView.tsx  DeletePodDialog.tsx  FrogCrypto.tsx  FrogViewer.tsx  Frogedex.tsx  GitHubIdentitySetupModal.tsx  IdentitySetupModal.tsx  ImportPodDialog.tsx  InboxView.tsx  MainContent.tsx  MainPodCard.tsx  PodViewer.tsx  PublicKeyAvatar.tsx  RsaIntroPodCard.tsx  SignedPodCard.tsx  TopBar.tsx  TopBarContext.tsx  ValueRenderer.tsx  theme-provider.tsx
apps/client/src/hooks/: useBlockSelection.ts  useDocumentActions.ts  useDocumentData.ts  useDocumentSidebarState.ts  useFileDownload.ts  useSidebarState.ts  useTextSelection.ts  useUpvote.ts
apps/client/src/lib/: blockUtils.ts  contentUtils.ts  dateUtils.ts  deeplink-simple.ts  documentApi.ts  fileUtils.ts  github-oauth.ts  monacoWorkers.ts  persistence.ts  query.ts  replyUtils.ts  router.tsx  rpc.ts  store.ts  timeUtils.ts
apps/client/src/routes/: __root.tsx  debug.tsx  editor.tsx  frogcrypto.tsx  index.tsx
apps/client/src/test/: setup.ts
apps/client/src/workers/: markdown.worker.ts
apps/playground-client/: README.md  tsconfig.json  vite.config.js
apps/playground-client/src/: styles.css
apps/playground-client/src/components/: ImportPodDialog.tsx  LeftSidebar.tsx  MainPodCard.tsx  PodViewerPane.tsx  ResultsPane.tsx  SignedPodCard.tsx  SpaceExplorer.tsx  (+1 more)
apps/simple-zukyc/: next.config.ts
core/jsonschema/: Cargo.toml
core/jsonschema/src/: main.rs
core/models/: Cargo.toml
core/models/src/: lazy_pod.rs  lib.rs  macros.rs
core/models/src/mainpod/: delete.rs  mod.rs  publish.rs  upvote.rs
core/models/tests/: upvote_count_test.rs
core/new_solver/: Cargo.toml  log.txt
core/new_solver/src/: custom.rs  edb.rs  engine.rs  lib.rs  op.rs  proof_dag.rs  replay.rs  test_helpers.rs  types.rs  util.rs
core/new_solver/tests/: ethdos.rs  other.rs  replay_integration.rs
core/solver/notes/: arithmetic-datalog.md
core/solver/src/: db.rs  debug.rs  error.rs  explainer.rs  ir.rs  lib.rs  planner.rs  pretty_print.rs  proof.rs  trace.rs  vis.rs
core/utils/src/: lib.rs  prover_setup.rs
db/: Cargo.toml
db/migrations/03-p2p_messaging/: up.sql
db/migrations/06-regenerate_public_keys/: up.sql
db/migrations/07-identity_setup/: up.sql
db/src/: lib.rs  store.rs
docs/: API_DOCUMENTATION.md  GITHUB_OAUTH_INTEGRATION.md
plans/: console_mod.md
pod2-client/db/src/: lib.rs  store.rs
podnet/cli/: Cargo.toml
podnet/cli/src/: config.rs  conversion.rs  main.rs  utils.rs
podnet/identity-github/: Cargo.toml  README.md
podnet/identity-github/src/: database.rs  github.rs  identity.rs  main.rs  registration.rs
podnet/identity-strawman/: Cargo.toml
podnet/identity-strawman/src/: config.rs  main.rs
podnet/server/: Cargo.toml
podnet/server/src/: config.rs  main.rs  pod.rs
podnet/server/src/db/: migrations.rs  mod.rs
podnet/server/src/handlers/: documents.rs  mod.rs  posts.rs  registration.rs  server.rs  upvotes.rs
podnet/server/src/pod/: config.rs
podnet/server/src/storage/: mod.rs
scripts/: bump-version.sh
server/: Cargo.toml  mainpod_schema.json  pod2.db
server/src/: api_types.rs  config.rs  db.rs  handlers.rs  lib.rs  routes.rs
server/src/db/: mod.rs  store.rs
server/src/handlers/: playground.rs  pod_management.rs  space_management.rs
solver/: Cargo.toml
solver/src/: db.rs  debug.rs  explainer.rs  lib.rs  metrics.rs  mod.rs  old_vis.rs  planner.rs  pretty_print.rs  proof.rs  test_upvote_fix.rs  trace.rs  vis.rs
solver/src/engine/: proof_reconstruction.rs  semi_naive.rs
solver/src/semantics/: materializer.rs  predicates.rs
web/: .gitignore  .oxlintrc.json  mprocs.yaml  package.json  pnpm-lock.yaml  turbo.json
web/apps/playground-client/: .cta.json  index.html  package.json  tsconfig.json  vite.config.js  vitest.config.js
web/apps/pod2-issuer-client/: .cta.json  .env.swp  index.html  package.json
web/apps/simple-zukyc/: package.json
(+229 files in other folders)
