[workspace]
resolver = "2"
members = ["solver", "server"]


[patch."https://github.com/0xPARC/pod2"]
pod2 = { path = "../pod2/dev" }

[workspace.dependencies]
pod2 = { git = "https://github.com/0xPARC/pod2", branch = "main" }
pod2_solver = { path = "solver" }
hex = "0.4.3"
itertools = "0.14.0"
log = "0.4"
env_logger = "0.11"
thiserror = { version = "2.0.12" }
petgraph = "0.8.2"
serde = "1.0.219"
serde_json = "1.0.140"
schemars = "0.8.22"
num = { version = "0.4.3", features = ["num-bigint"] }
num-bigint = { version = "0.4.6", features = ["rand"] }
pest = "2.8.0"
pest_derive = "2.8.0"

[workspace.dev-dependencies]
pod2 = { git = "https://github.com/0xPARC/pod2", branch = "main", features = ["examples"] }
