[workspace]
resolver = "2"
members = ["solver", "apps/client/src-tauri", "db", "packages/pod2-node"]

[workspace.dependencies]
pod2 = { git = "https://github.com/0xPARC/pod2", branch = "playground-tweaks", features = [
  "examples",
] }
pod2_solver = { path = "solver" }
pod2_server = { path = "server" }
podnet-models = { git = "https://github.com/0xPARC/podnet", rev = "35f4a3724a8b5c3269ba9c173e05558f032f6b36" }
pod2_db = { path = "db" }
hex = "0.4.3"
itertools = "0.14.0"
log = "0.4"
env_logger = "0.11"
thiserror = { version = "2.0.12" }
petgraph = "0.8.2"
serde = "1.0.219"
serde_json = "1.0.140"
schemars = "0.8.22"
num = { version = "0.4.3", features = ["num-bigint"] }
num-bigint = { version = "0.4.6", features = ["rand"] }
pest = "2.8.0"
pest_derive = "2.8.0"
anyhow = "1.0.56"
axum = "0.7"
axum-test = "14.0"
chrono = "0.4"
clap = "4"
config = "0.14"
deadpool-sqlite = "0.11.0"
include_dir = "0.7.4"
lazy_static = "1.5.0"
rand = "0.8"
rusqlite = "0.35.0"
rusqlite_migration = { version = "2.1.0", features = ["from-directory"] }
tempfile = "3.10"
tokio = "1.21.0"
toml = "0.8"
tower-http = "0.5"
uuid = "1.16.0"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[workspace.dev-dependencies]
pod2 = { git = "https://github.com/0xPARC/pod2", branch = "playground-tweaks", features = [
  "examples",
] }
