[workspace]
resolver = "2"
members = [
    "core/jsonschema",
    "core/models", 
    "core/utils", 
    "core/new_solver",
    "podnet/server", 
    "podnet/cli", 
    "podnet/identity-strawman", 
    "pod2-client/db", 
    "apps/client/src-tauri",
    "packages/pod2-node"
, "podnet/identity-github"]

[workspace.dependencies]
pod2 = { git = "https://github.com/0xPARC/pod2", rev = "fbf75a8f53d1dde67e8346fbc83e06532d5e15bd", default-features = false,  features = [  "backend_plonky2", "zk", "examples", "disk_cache" ] }
pod2_solver = { path = "core/new_solver" }
podnet-models = { path = "core/models" }
pod-utils = { path = "core/utils" }
pod2_db = { path = "pod2-client/db" }
hex = "0.4.3"
itertools = "0.14.0"
log = "0.4"
env_logger = "0.11"
thiserror = { version = "2.0.12" }
petgraph = "0.8.2"
serde = "1.0.219"
serde_json = "1.0.140"
schemars = "0.8.22"
num = { version = "0.4.3", features = ["num-bigint"] }
num-bigint = { version = "0.4.6", features = ["rand"] }
pest = "2.8.0"
pest_derive = "2.8.0"
anyhow = "1.0.56"
axum = "0.7"
axum-test = "14.0"
chrono = "0.4"
clap = "4"
config = "0.14"
deadpool-sqlite = "0.11.0"
include_dir = "0.7.4"
lazy_static = "1.5.0"
rand = "0.8"
rusqlite = "0.35.0"
rusqlite_migration = { version = "2.1.0", features = ["from-directory"] }
tempfile = "3.10"
tokio = { version = "1.21.0", features = ["full"] }
toml = "0.8"
tower-http = "0.5"
uuid = "1.16.0"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"
url = "2.4"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2.git" }

# Common workspace metadata
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

# Shared profile
[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dev-dependencies]
pod2 = { git = "https://github.com/0xPARC/pod2", rev = "770da880e9219f2ebe21c79a63637f7b3e84f494", features = [
  "examples",
] }
