[package]
name = "pod2_db"
version = "0.1.0"
edition = "2021"

[lib]
name = "pod2_db"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] } 
rusqlite = { workspace = true, features = ["bundled"] }
rusqlite_migration = { workspace = true, features = ["from-directory"] }
lazy_static = { workspace = true }
log = { workspace = true }
include_dir = { workspace = true }
deadpool-sqlite = { workspace = true, features = ["rt_tokio_1"] }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
pod2 = { workspace = true }
schemars = { workspace = true }
hex = { workspace = true }
num = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }