[package]
name = "pod2-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "pod2_server"
path = "src/lib.rs"

[dependencies]
pod2 = { workspace = true }
pod2_solver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
schemars = { workspace = true }
num = { workspace = true }
num-bigint = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
deadpool-sqlite = { workspace = true, features = ["rt_tokio_1"] }
axum = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
config = { workspace = true, features = ["toml"] }
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true } # For creating temporary config files in tests
axum-test = { workspace = true } # For testing Axum handlers
chrono = { workspace = true, features = ["serde"] } # For timestamps
