[package]
name = "pod_client"
version = "0.1.0"
description = "POD Playground native client"
authors = ["rob@0xparc.org"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pod2 = { workspace = true }
pod2_db = { workspace = true }
pod2_solver = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
num = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-store = "2"
iroh = "0.35"
iroh-base = { version = "0.35", features = ["ticket"] }
iroh-gossip = "0.35"
n0-future = "0.1.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
hex = "0.4"
tauri-plugin-http = "2"
reqwest = { version = "0.12.22", features = ["json"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
